--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,8 +7,11 @@ jobs:
   test:
     name: Ruby ${{ matrix.ruby }}
     runs-on: ubuntu-latest
+    env:
+      COINAPI_KEY: ${{ secrets.COINAPI_KEY }}
+
     strategy:
-      matrix: { ruby: ['2.5', '2.6', '2.7', '3.0'] }
+      matrix: { ruby: ['2.7', '3.0'] }
 
     steps:
     - name: Checkout code
